--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -1,16 +1,61 @@
 .home {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding-top: 10rem;
-  padding-bottom: 5rem;
+  padding-bottom: 6rem;
+  position: relative;
 }
 
-.home p:first-child {
+.hello {
+  display: flex;
+  position: relative;
+  gap: 0.3rem;
+  align-items: center;
+}
+
+.hello p {
+  background-image: linear-gradient(to right, #a839ff, #800add);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   font-size: 1.3rem;
   font-weight: 600;
   font-family: var(--type-first);
-  margin-bottom: 0.5rem;
+}
+
+.icone {
+  align-items: center;
+  font-size: 1.3rem;
+  margin-bottom: 0.3rem;
+  animation: moveIcone 2s infinite;
+  transform-origin: 70% 70%;
+}
+
+@keyframes moveIcone {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .home h1 {
@@ -21,40 +66,39 @@
   margin-bottom: 1rem;
 }
 
-.home p {
+.work {
   font-size: 1.3rem;
   font-weight: 400;
   font-family: var(--type-first);
-  color: #7c7c8a;
+  color: var(--gray);
 }
 
 @media (max-width: 45rem) {
   .home {
     padding-top: 6rem;
+    padding-bottom: 3rem;
+  }
+  .hello p {
+    font-size: 1rem;
   }
   .home h1 {
     font-size: 4rem;
     margin-bottom: 1rem;
   }
-  .home p:first-child {
-    font-size: 1rem;
-  }
-  .home p {
+  .work {
     font-size: 1rem;
   }
 }
 
-@media (max-width: 25rem) {
+@media (max-width: 30rem) {
   .home {
-    padding-top: 5rem;
+    padding-top: 4rem;
+    padding-bottom: 2rem;
   }
   .home h1 {
     font-size: 3rem;
   }
-  .home p:first-child {
-    font-size: 0.6rem;
-  }
-  .home p {
+  .work {
     font-size: 0.8rem;
   }
 }
