--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 :root {
   --bg: #020617;
+  --bg2: #13131f;
   --gray: #7c7c8a;
   --white: #f5f5f5;
 }
@@ -22,6 +23,7 @@ body {
 h1,
 h2,
 h3,
+h4,
 p {
   margin: 0px;
 }
@@ -46,6 +48,22 @@ a {
   text-decoration: none;
 }
 
+h3 {
+  padding-bottom: 1.5rem;
+  text-transform: uppercase;
+  font-family: var(--type-first);
+  color: var(--gray);
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+  font-weight: 400;
+}
+
+@media (max-width: 30rem) {
+  h3 {
+    font-size: 0.8rem;
+  }
+}
+
 .container {
   max-width: 60rem;
   padding: 0 2rem;
@@ -63,14 +81,6 @@ a {
     opacity: 1;
     transform: initial;
   }
-}
-
-.title {
-  padding-left: 3rem;
-  font-family: var(--type-first);
-  letter-spacing: 0.1rem;
-  font-weight: 600;
-  font-size: 2rem;
 }
 
 .App {
