--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -15,15 +15,13 @@
 }
 
 .image img {
-  display: block;
-  max-width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 4px;
+  border-radius: 3%;
 }
 
 .image::before {
-  content: url(../../assets/detail.svg);
+  content: url(../../assets/imageDetail.svg);
   position: absolute;
   top: 0;
   left: 0;
@@ -38,13 +36,7 @@
 
 .aboutMe h3 {
   text-align: center;
-  text-transform: uppercase;
-  font-family: var(--type-first);
-  padding-bottom: 1.5rem;
   padding-top: 6rem;
-  color: var(--gray);
-  font-size: 1rem;
-  font-weight: 400;
 }
 
 .aboutMe p {
@@ -80,7 +72,6 @@
   }
   .aboutMe h3 {
     padding-top: 0;
-    font-size: 1rem;
   }
   .aboutMe p {
     font-size: 1rem;
@@ -90,13 +81,11 @@
 
 @media (max-width: 30rem) {
   .image {
-    padding: .5rem 0 0 0;
+    padding: 0.5rem 0 0 0;
     height: 120px;
-    width: 100%;
   }
   .aboutMe h3 {
     padding-top: 4rem;
-    font-size: 0.8rem;
   }
   .aboutMe p {
     font-size: 0.8rem;
