--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -1,38 +1,51 @@
 .skills {
   display: flex;
   flex-direction: column;
-  padding-bottom: 10rem;
-}
-
-.skills h2 {
-  padding: 4rem 0 3rem 3rem;
-  font-family: var(--type-first);
-  letter-spacing: 0.1rem;
-  font-weight: 600;
-  color: var(--white);
-  font-size: 2rem;
-}
-
-.mySkills h3 {
-  font-family: var(--type-first);
-  color: var(--gray);
-  font-weight: 400;
-  padding-bottom: 2rem;
-  text-transform: uppercase;
-  font-size: 1rem;
 }
 
 .list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(100px, auto);
   font-family: var(--type-first);
+  padding-top: 1rem;
   padding-bottom: 4rem;
   gap: 1rem;
 }
 
 .list li {
-  border: 1px solid var(--gray);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 0.8rem;
+  justify-content: center;
+  letter-spacing: 0.06rem;
+  background-color: var(--bg2);
+  color: var(--white);
   padding: 1rem;
-  border-radius: 50px;
   text-transform: uppercase;
-  font-size: 0.5rem;
+  font-size: 0.8rem;
+  border-radius: 4px;
+  transition: box-shadow 0.5s ease-in-out;
+}
+
+.list li:hover {
+  box-shadow: 0 0 20px rgba(168, 57, 255, 0.7);
+}
+
+@media (max-width: 50rem) {
+  .list {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(80px, auto);
+  }
+  .list li {
+    font-size: 0.2rem;
+  }
+}
+
+@media (max-width: 30rem) {
+  .list {
+    grid-template-columns: 1fr 1fr;
+  }
 }
