--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -18,17 +18,17 @@
 
 .project {
   border-radius: 4px;
-  transition: box-shadow 0.5s ease-in-out;
+  transition: box-shadow 0.6s ease-in-out;
 }
 
 .project:hover {
-  box-shadow: 0 0 20px rgba(168, 57, 255, 0.7);
+  box-shadow: 0 0 15px rgba(168, 57, 255, 0.7);
 }
 
 .prod {
   padding-left: 1rem;
   padding-right: 1rem;
-  background-color: var(--bg2);
+  background-color: var(--bg-2);
   border-radius: 0 0 4px 4px;
 }
 
@@ -42,6 +42,7 @@
 .title {
   display: flex;
   font-family: var(--type-first);
+  color: var(--text-2);
   padding-top: 1rem;
   padding-bottom: 0.5rem;
   justify-content: space-between;
@@ -49,6 +50,7 @@
 
 .project p {
   font-size: 0.5rem;
+  color: var(--text-3);
   font-family: var(--type-first);
   padding-bottom: 1rem;
 }
