--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,14 +1,14 @@
 .about {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto auto;
   grid-template-rows: auto 1fr;
-  padding-bottom: 4rem;
+  padding-top: 1.5rem;
+  padding-bottom: 3rem;
 }
 
 .image {
-  grid-row: 2/3;
-  height: 300px;
-  width: 300px;
+  height: 280px;
+  width: 280px;
   position: relative;
   padding: 2rem 0 0 2rem;
   overflow: hidden;
@@ -17,78 +17,61 @@
 .image img {
   height: 100%;
   object-fit: cover;
-  border-radius: 3%;
-}
-
-.image::before {
-  content: url(../../assets/imageDetail.svg);
-  position: absolute;
-  top: 0;
-  left: 0;
+  border-radius: 4%;
 }
 
 .aboutMe {
   grid-column: 2/-1;
   grid-row: 1/-1;
-  padding-left: 2.5rem;
-  position: relative;
+  padding-left: 2rem;
+  padding-top: 4.5rem;
 }
 
 .aboutMe h3 {
   text-align: center;
-  padding-top: 6rem;
 }
 
 .aboutMe p {
   font-family: var(--type-first);
+  color: var(--text-1);
   font-size: 1rem;
   line-height: 1.5rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0.75rem;
 }
 
-@media (max-width: 50rem) {
+@media (max-width: 55rem) {
   .about {
     grid-template-columns: auto;
     grid-template-rows: repeat(3, auto);
+    padding-top: 0;
   }
   .image {
     display: flex;
     height: 180px;
     width: 100%;
-    grid-row: 3/4;
     justify-content: center;
-    padding: 1rem 0 0 0;
+    padding: 1.5rem 0 0 0;
   }
   .image img {
     border-radius: 50%;
   }
-  .image::before {
-    display: none;
-  }
   .aboutMe {
     grid-row: 2/3;
-    padding-left: 1rem;
     grid-column: 1/-1;
-  }
-  .aboutMe h3 {
+    padding-left: 0;
     padding-top: 0;
   }
   .aboutMe p {
-    font-size: 1rem;
-    line-height: 1.3rem;
+    padding-bottom: 1rem;
   }
 }
 
 @media (max-width: 30rem) {
   .image {
-    padding: 0.5rem 0 0 0;
-    height: 120px;
-  }
-  .aboutMe h3 {
-    padding-top: 4rem;
+    padding: 1rem 0 0 0;
+    height: 140px;
   }
   .aboutMe p {
-    font-size: 0.8rem;
-    line-height: 1.1rem;
+    font-size: 1rem;
   }
 }
