--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -5,17 +5,16 @@
 }
 
 .footer p {
-  padding: 4rem 6rem;
-  font-size: 1.2rem;
-  color: var(--gray);
+  padding: 3rem 3rem;
+  font-size: 1.25rem;
+  color: var(--text-2);
   letter-spacing: 0.1rem;
   font-family: var(--type-second);
 }
 
 .footer span {
-  padding-bottom: 4rem;
   font-size: 1rem;
-  color: var(--gray);
+  color: var(--gray-2);
   font-family: var(--type-first);
 }
 
@@ -27,7 +26,7 @@
 
 @media (max-width: 30rem) {
   .footer p {
-    padding: 2rem 0;
+    padding-bottom: 2rem;
     font-size: 1rem;
   }
   .footer span {
