--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -1,42 +1,37 @@
 .home {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  vertical-align: bottom;
+  min-height: 100vh;
   justify-content: center;
-  position: relative;
-}
-
-.bg {
-  background: var(--bg-gradient);
+  padding-top: 3.75rem;
 }
 
 .iconHello {
   display: flex;
   position: relative;
-  gap: 0.3rem;
+  gap: 0.25rem;
   align-items: center;
 }
 
 .iconHello p {
-  background-image: linear-gradient(to right, #a839ff, #800add);
+  font-family: var(--type-first);
+  background-image: var(--gradient);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  font-size: 1.3rem;
+  font-size: 1.25rem;
   font-weight: 600;
-  font-family: var(--type-first);
 }
 
-.icon {
+.iconHello span {
   align-items: center;
-  font-size: 1.3rem;
-  margin-bottom: 0.3rem;
-  animation: moveIcone 2s infinite;
+  font-size: 1.5rem;
+  margin-bottom: 0.375rem;
+  animation: moveIcon 2s infinite;
   transform-origin: 70% 70%;
 }
 
-@keyframes moveIcone {
+@keyframes moveIcon {
   0% {
     transform: rotate(0deg);
   }
@@ -65,45 +60,35 @@
 
 .home h1 {
   font-family: var(--type-second);
-  font-size: 4.5rem;
+  color: var(--text-1);
+  font-size: 4rem;
   letter-spacing: 0.2rem;
   font-weight: 600;
-  margin-bottom: 1rem;
 }
 
-.work {
-  font-size: 1.3rem;
+.home h2 {
+  font-size: 1.25rem;
   font-weight: 400;
-  font-family: var(--type-first);
-  color: var(--gray);
-}
-
-@media (max-width: 45rem) {
-  .home {
-    padding-top: 6rem;
-    padding-bottom: 3rem;
-  }
-  .hello p {
-    font-size: 1rem;
-  }
-  .home h1 {
-    font-size: 4rem;
-    margin-bottom: 1rem;
-  }
-  .work {
-    font-size: 1rem;
-  }
+  padding-top: 1rem;
+  text-transform: none;
 }
 
 @media (max-width: 30rem) {
   .home {
-    padding-top: 4rem;
-    padding-bottom: 2rem;
+    padding-top: 2rem;
+    align-items: center;
+  }
+  .iconHello p {
+    font-size: 1rem;
+    padding-right: 2.5rem;
+  }
+  .iconHello span {
+    font-size: 1.25rem;
   }
   .home h1 {
     font-size: 3rem;
   }
-  .work {
-    font-size: 0.8rem;
+  .home h2 {
+    font-size: 1rem;
   }
 }
