--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -29,6 +29,7 @@
 
 .aboutMe h3 {
   text-align: center;
+  padding-bottom: 1.25rem;
 }
 
 .aboutMe p {
@@ -44,6 +45,9 @@
     grid-template-columns: auto;
     grid-template-rows: repeat(3, auto);
     padding-top: 0;
+  }
+  .about h2 {
+    padding: 2rem 0 2rem 2rem;
   }
   .image {
     display: flex;
