--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -1,64 +1,43 @@
 .contact {
+  display: flex;
+  flex-direction: column;
   padding-bottom: 3rem;
 }
 
-.networks {
+.contactList {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  gap: 0.75rem;
+  padding: 4rem 0;
   transition: box-shadow 0.5s ease-in-out;
 }
 
-.list {
-  display: flex;
-  padding-top: 1.25rem;
-  flex-direction: column;
-  align-items: center;
-  transition: 0.2s;
-}
-
-.list:hover {
-  transform: scale(1.2);
-}
-
-.list p {
-  font-family: var(--type-first);
-  color: var(--text-1);
-  font-size: 1rem;
+.call {
+  font-family: var(--type-second);
+  color: var(--text-2);
+  background: var(--background-2);
+  border-radius: 10px;
+  text-align: center;
+  padding: 3rem;
+  font-size: 1.25rem;
   letter-spacing: 0.1rem;
 }
 
-.list span {
-  font-family: var(--type-first);
-  color: var(--gray-1);
-  font-size: 1rem;
-}
-
-.icon {
-  display: flex;
-  height: 50px;
-  width: 50px;
-  margin-bottom: 1rem;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--background-2);
-  border-radius: 50%;
-}
-
 @media (max-width: 50rem) {
-  .networks {
+  .contact h2 {
+    padding: 2rem 0 2rem 2rem;
+  }
+  .contactList {
     gap: 0.5rem;
   }
-  .list span {
-    display: none;
+  .call {
+    padding: 1rem 1rem 0;
+    font-size: 1rem;
   }
 }
 
 @media (max-width: 30rem) {
-  .list p {
-    font-size: 0.75rem;
-  }
-  .icon {
-    margin-bottom: 0.5rem;
+  .call {
+    padding: 0 0;
+    font-size: 0.875rem;
   }
 }
