--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -4,84 +4,16 @@
   padding-bottom: 3rem;
 }
 
-.projects h3 {
-  padding-bottom: 2rem;
-}
-
-.container {
+.myProjects {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
-  padding-bottom: 1rem;
-}
-
-.project {
-  border-radius: 4px;
-  transition: box-shadow 0.6s ease-in-out;
-}
-
-.project:hover {
-  box-shadow: 0 0 15px rgba(168, 57, 255, 0.7);
-}
-
-.prod {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  background-color: var(--bg-2);
-  border-radius: 0 0 4px 4px;
-}
-
-.project img {
-  border-radius: 4px 4px 0 0;
-  height: 180px;
-  width: 100%;
-  object-fit: cover;
-}
-
-.title {
-  display: flex;
-  font-family: var(--type-first);
-  color: var(--text-2);
-  padding-top: 1rem;
-  padding-bottom: 0.5rem;
-  justify-content: space-between;
-}
-
-.project p {
-  font-size: 0.5rem;
-  color: var(--text-3);
-  font-family: var(--type-first);
-  padding-bottom: 1rem;
-}
-
-.icons {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 2rem;
 }
 
 @media (max-width: 50rem) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
-    gap: 1.5rem;
-    padding-top: 1rem;
-  }
   .project {
     display: flex;
-  }
-  .prod {
-    border-radius: 0 4px 4px 0;
-  }
-  .project img {
-    border-radius: 4px 0 0 4px;
-  }
-  .icons {
-    padding-bottom: 0;
-    padding-left: 1rem;
   }
 }
 
@@ -89,18 +21,8 @@
   .project {
     flex-direction: column;
   }
-  .icons {
-    padding-bottom: 1rem;
-    padding-left: 0;
-  }
   .projects h3 {
     padding-bottom: 1rem;
     padding-top: 2rem;
-  }
-  .prod {
-    border-radius: 0 0 4px 4px;
-  }
-  .project img {
-    border-radius: 4px 4px 0 0;
   }
 }
