--- a/src/Components/Home.module.css
+++ b/src/Components/Home.module.css
@@ -6,6 +6,13 @@
   padding-top: 3.75rem;
 }
 
+.hello{
+  background-image: var(--gradient-1);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
 .iconHello {
   display: flex;
   position: relative;
@@ -21,7 +28,7 @@
 
 .iconHello span {
   align-items: center;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   margin-bottom: 0.375rem;
   animation: moveIcon 2s infinite;
   transform-origin: 70% 70%;
