--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -1,25 +1,23 @@
 .skills {
   display: flex;
   flex-direction: column;
-  padding-bottom: 3rem;
-}
-
-.listSkills > ul:first-of-type {
+  padding-top: 1.5rem;
   padding-bottom: 3rem;
 }
 
 .listSkills h3 {
-  padding-bottom: 1.25rem;
+  padding-bottom: 1.5rem;
 }
 
 @media (max-width: 55rem) {
   .skills h2 {
-    padding: 2rem 0 2rem 2rem;
+    padding: 4rem 0 2rem 2rem;
   }
 }
 
 @media (max-width: 30rem) {
-  .listSkills > ul:first-of-type {
-    padding-bottom: 2rem;
+  .skills {
+    padding-top: 0;
+    padding-bottom: 1rem;
   }
 }
