--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -7,7 +7,7 @@
 }
 
 .image {
-  height: 280px;
+  height: 300px;
   width: 280px;
   position: relative;
   padding: 2rem 0 0 2rem;
@@ -16,6 +16,7 @@
 
 .image img {
   height: 100%;
+  width: 100%;
   object-fit: cover;
   border-radius: 4%;
 }
@@ -24,26 +25,44 @@
   grid-column: 2/-1;
   grid-row: 1/-1;
   padding-left: 2rem;
-  padding-top: 4.5rem;
+  padding-top: 3rem;
 }
 
 .aboutMe h3 {
   text-align: center;
-  padding-bottom: 1.25rem;
+  padding-bottom: 1rem;
 }
 
 .aboutMe p {
   font-family: var(--type-first);
   color: var(--text-2);
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: 400;
-  line-height: 1.5rem;
-  padding-bottom: 0.75rem;
+  line-height: 1.2rem;
+  padding-bottom: 0.5rem;
+}
+
+.aboutMe span {
+  color: var(--gray-2);
+  font-family: var(--type-first);
+  font-size: 0.875rem;
+}
+
+.aboutMe span::before {
+  content: '';
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: var(--primary-1);
+  border-radius: 50%;
+  margin-right: 0.4rem;
+  margin-bottom: 0.1rem;
 }
 
 .icons {
   display: flex;
   align-items: center;
+  padding-top: 1rem;
   justify-content: center;
   gap: 0.5rem;
 }
@@ -53,6 +72,11 @@
   padding: 0.6rem;
   border-radius: 50%;
   display: inline-flex;
+  transition: 0.4s;
+}
+
+.icons a:hover {
+  transform: scale(1.2);
 }
 
 @media (max-width: 55rem) {
@@ -62,18 +86,20 @@
     padding-top: 0;
     padding-bottom: 1rem;
   }
-  .about h2 {
-    padding: 3rem 0 2rem 2rem;
+  .icons {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
   .image {
-    display: flex;
     height: 180px;
-    width: 100%;
+    width: 180px;
+    margin: 0 auto;
     justify-content: center;
-    padding: 2rem 0 0 0;
+    padding: 0.5rem;
   }
   .image img {
     border-radius: 50%;
+    box-shadow: var(--box-shadow-3);
   }
   .aboutMe {
     grid-row: 2/3;
@@ -87,17 +113,12 @@
 }
 
 @media (max-width: 30rem) {
-  .about{
+  .about {
     padding-top: o;
     padding-bottom: 1rem;
   }
   .image {
     height: 140px;
-  }
-  .aboutMe p {
-    font-size: 1rem;
-  }
-  .icons {
-    justify-content: end;
+    width: 140px;
   }
 }
