--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -23,6 +23,8 @@
 
 .list {
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
   padding: 0.25rem;
   font-size: 1rem;
   color: var(--text-2);
@@ -30,6 +32,33 @@
 
 .list:hover {
   color: var(--gray-3);
+  transition: color 0.4s ease;
+}
+
+.list:hover::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  top: 80%;
+  border-radius: 4px;
+  background: var(--gradient-2);
+  transition: width 0.2s ease-in-out;
+}
+
+.list:hover::before {
+  animation: underline 0.8s forwards;
+}
+
+@keyframes underline {
+  from {
+    width: 0;
+    left: 0;
+  }
+  to {
+    width: 100%;
+    left: 0;
+  }
 }
 
 @media (max-width: 45rem) {
