--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   padding-top: 1.5rem;
-  padding-bottom: 3rem;}
+  padding-bottom: 3rem;
+}
 
 .myProjects {
   display: grid;
