--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,14 +9,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 3.75rem;
+  height: 5rem;
   flex-wrap: wrap;
 }
 
 .nav {
   display: flex;
   gap: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   font-family: var(--type-first);
   align-items: center;
 }
@@ -26,7 +26,7 @@
   position: relative;
   overflow: hidden;
   padding: 0.25rem;
-  font-size: 1rem;
+  font-size: 1.25rem;
   color: var(--text-2);
 }
 
@@ -73,14 +73,14 @@
   align-items: center;
   justify-content: center;
   background: var(--bg-mode);
-  border-radius: 15px;
-  padding: 0.25rem;
+  border-radius: 25px;
+  padding: 0.375rem 0.5rem;
   transition: background-color 0.3s ease;
 }
 
 .themeToggle {
-  width: 20px;
-  height: 20px;
+  width: 1.5rem;
+  height: 1.5rem;
   border-radius: 50%;
   cursor: pointer;
   background: var(--mode);
@@ -95,11 +95,11 @@
 }
 
 .dark .themeToggle {
-  transform: translateX(25px);
+  transform: translateX(30px);
 }
 
 .dark .iconContainer {
-  transform: translateX(-25px);
+  transform: translateX(-30px);
 }
 
 .light .themeToggle {
