--- a/src/Components/Header/HeaderLogo.module.css
+++ b/src/Components/Header/HeaderLogo.module.css
@@ -1,25 +1,22 @@
 .logo {
   display: flex;
   align-items: center;
+  gap: 0.25rem;
   cursor: pointer;
-}
-
-.listLogo {
-  padding: 0 0.2rem 0 0.25rem;
 }
 
 .list {
   display: inline-block;
   font-family: var(--type-second);
   color: var(--text-2);
-  padding: 0.25rem 0;
-  letter-spacing: 0.05rem;
-  font-size: 1rem;
+  padding-bottom: 0.25rem;
+  letter-spacing: 0.06rem;
+  font-size: 1.25rem;
   font-weight: 800;
   transition: transform 0.2s, color 0.4s;
 }
 
 .list:hover {
-  transform: translateY(-5px);
+  transform: translateY(-6px);
   color: var(--primary-1);
 }
