--- a/src/Components/Header/MobileMenu.module.css
+++ b/src/Components/Header/MobileMenu.module.css
@@ -7,12 +7,12 @@
 }
 
 .navMobile li:not(:first-child) {
-  padding: 0.5rem;
+  padding: 1rem 1rem 1rem 0;
 }
 
 .list {
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 200;
   font-family: var(--type-first);
   color: var(--text-2);
@@ -31,8 +31,8 @@
   background: var(--bg-mode);
   vertical-align: middle;
   border-radius: 50%;
-  height: 35px;
-  width: 35px;
+  height: 3rem;
+  width: 3rem;
   padding: 0px;
   display: flex;
   align-items: center;
@@ -45,30 +45,30 @@
 .mobileButton::after {
   content: '';
   position: absolute;
-  width: 1rem;
-  height: 2px;
-  border-radius: 2px;
+  width: 1.25rem;
+  height: 0.15rem;
+  border-radius: 4px;
   background: var(--primary-1);
-  box-shadow: 0 6px var(--primary-1), 0 -6px var(--primary-1);
+  box-shadow: 0 8px var(--primary-1), 0 -8px var(--primary-1);
   transition: 0.2s;
 }
 
 .mobileButtonActive::after {
   transform: rotate(-90deg);
-  width: 4px;
-  height: 4px;
+  width: 0.376rem;
+  height: 0.376rem;
 }
 
 .navMobile {
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 60px;
-  right: 5px;
-  padding: 0.5rem 2rem 0.5rem 1rem;
+  top: 80px;
+  right: 1rem;
+  padding: 0.5rem 3rem 0.5rem 2rem;
   background: var(--header);
   border-radius: 4px;
-  transform: translateX(-10px);
+  transform: translateX(-20px);
   opacity: 0;
   pointer-events: none;
 }
