--- a/src/Components/Header/MobileMenu.module.css
+++ b/src/Components/Header/MobileMenu.module.css
@@ -1,7 +1,3 @@
-.menu li {
-  display: none;
-}
-
 .navMobile li:not(:first-child):not(:last-child) {
   border-bottom: 1px solid var(--bg-mode);
 }
@@ -11,7 +7,6 @@
 }
 
 .list {
-  cursor: pointer;
   font-size: 1.25rem;
   font-weight: 200;
   font-family: var(--type-first);
@@ -22,23 +17,15 @@
   color: var(--gray-3);
 }
 
-.mode {
-  display: flex;
-  justify-content: center;
-}
-
 .mobileButton {
   background: var(--bg-mode);
-  vertical-align: middle;
   border-radius: 50%;
   height: 3rem;
   width: 3rem;
-  padding: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid transparent;
-  transition: 0.2s;
   cursor: pointer;
 }
 
@@ -50,33 +37,59 @@
   border-radius: 4px;
   background: var(--primary-1);
   box-shadow: 0 8px var(--primary-1), 0 -8px var(--primary-1);
-  transition: 0.2s;
+  transition: 0.4s;
 }
 
 .mobileButtonActive::after {
   transform: rotate(-90deg);
-  width: 0.376rem;
-  height: 0.376rem;
+  width: 0.375rem;
+  height: 0.375rem;
 }
 
 .navMobile {
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 80px;
-  right: 1rem;
+  display: none;
+  top: 4rem;
+  right: 2rem;
   padding: 0.5rem 3rem 0.5rem 2rem;
-  background: var(--header);
+  background: var(--bg-gradient);
   border-radius: 4px;
-  transform: translateX(-20px);
-  opacity: 0;
   pointer-events: none;
+  animation: animeMode 1s ease-in-out forwards;
+  transition: transform 0.1s ease-in-out, opacity 0.1s ease-in-out;
+}
+
+@keyframes animeMode {
+  from {
+    opacity: 0;
+    transform: translateX(80px) translateY(-40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) translateY(0);
+  }
+}
+
+.navMobile li {
+  cursor: pointer;
 }
 
 .navMobileActive {
-  transition: 0.4s;
   transform: initial;
   opacity: 1;
   pointer-events: initial;
   z-index: 100;
+}
+
+.mode {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 50rem) {
+  .navMobile {
+    display: flex;
+  }
 }
