--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  width: 100%;
+  position: relative;
+  vertical-align: bottom;
   justify-content: center;
 }
 
