--- a/src/Components/Projects/ProjectsModal.module.css
+++ b/src/Components/Projects/ProjectsModal.module.css
@@ -1,12 +1,12 @@
 .modal {
   position: absolute;
-  top: 15%;
+  top: 5%;
   left: 0;
   right: 0;
   bottom: 0;
   width: 80%;
   max-width: 70rem;
-  height: 80%;
+  height: 90%;
   margin: 0 auto;
   overflow: hidden;
   z-index: 1000;
@@ -29,6 +29,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 2fr;
+  height: 100%; 
 }
 
 .container img {
@@ -53,8 +54,8 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: var(--background-2);
-  padding: 1.5rem;
-  height: 80vh;
+  padding: 0.5rem 1.5rem;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -113,7 +114,7 @@
   .technologies {
     flex-direction: column;
     justify-content: flex-end;
-    gap: 1rem;
+    gap: 0.5rem;
   }
   .technologies a {
     font-size: 1rem;
